hphp/hack/test/typecheck/reified_generics/newable_tparams_simple.php.exp
File "newable_tparams_simple.php", line 16, characters 23-25:
The type parameter Tc1 has the <<__Newable>> attribute. Newable type parameters must be constrained with `as`, and exactly one of those constraints must be a valid newable class. The class must either be final, or it must have the <<__ConsistentConstruct>> attribute or extend a class that has it. The constraints Y, YY are valid newable classes (Typing[4308])
File "newable_tparams_simple.php", line 17, characters 23-25:
The type parameter Tc2 has the <<__Newable>> attribute. Newable type parameters must be constrained with `as`, and exactly one of those constraints must be a valid newable class. The class must either be final, or it must have the <<__ConsistentConstruct>> attribute or extend a class that has it. No constraints are valid newable classes (Typing[4308])
File "newable_tparams_simple.php", line 19, characters 23-25:
The type parameter Tc3 has the <<__Newable>> attribute. Newable type parameters must be constrained with `as`, and exactly one of those constraints must be a valid newable class. The class must either be final, or it must have the <<__ConsistentConstruct>> attribute or extend a class that has it. No constraints are valid newable classes (Typing[4308])
